# Vinifera

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  doxyfile.in
cmake/modules/: FindOpenAL.cmake
cmake/toolchains/: ubuntu-mingw32.cmake  ubuntu-mingw64.cmake  ubuntu-osxcross-10.7.cmake  windows-mingw32.cmake
